crates/red_knot_python_semantic/resources/mdtest/snapshots/functions.md_-_Generic_functions_-_Inferring_a_bound_typevar.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: functions.md - Generic functions - Inferring a bound typevar
mdtest path: crates/red_knot_python_semantic/resources/mdtest/generics/functions.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import reveal_type
2 | 
3 | def f[T: int](x: T) -> T:
4 |     return x
5 | 
6 | reveal_type(f(1))  # revealed: Literal[1]
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy upper bound of type variable `T`"
9 | reveal_type(f("string"))  # revealed: Unknown
```

# Diagnostics

```
info: revealed-type: Revealed type
 --> src/mdtest_snippet.py:6:1
  |
4 |     return x
5 |
6 | reveal_type(f(1))  # revealed: Literal[1]
  | ^^^^^^^^^^^^^^^^^ `Literal[1]`
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy upper bo...
  |

```

```
info: revealed-type: Revealed type
 --> src/mdtest_snippet.py:7:1
  |
6 | reveal_type(f(1))  # revealed: Literal[1]
7 | reveal_type(f(True))  # revealed: Literal[True]
  | ^^^^^^^^^^^^^^^^^^^^ `Literal[True]`
8 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy upper b...
9 | reveal_type(f("string"))  # revealed: Unknown
  |

```

```
error: lint:invalid-argument-type: Argument to this function is incorrect
 --> src/mdtest_snippet.py:9:15
  |
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy upper b...
9 | reveal_type(f("string"))  # revealed: Unknown
  |               ^^^^^^^^ Argument type `Literal["string"]` does not satisfy upper bound of type variable `T`
  |
info: Type variable defined here
 --> src/mdtest_snippet.py:3:7
  |
1 | from typing_extensions import reveal_type
2 |
3 | def f[T: int](x: T) -> T:
  |       ^^^^^^
4 |     return x
  |

```

```
info: revealed-type: Revealed type
 --> src/mdtest_snippet.py:9:1
  |
7 | reveal_type(f(True))  # revealed: Literal[True]
8 | # error: [invalid-argument-type] "Argument to this function is incorrect: Argument type `Literal["string"]` does not satisfy upper b...
9 | reveal_type(f("string"))  # revealed: Unknown
  | ^^^^^^^^^^^^^^^^^^^^^^^^ `Unknown`
  |

```
