crates/red_knot_python_semantic/resources/mdtest/snapshots/overloads.md_-_Overloads_-_Invalid_-_Overload_without_an_implementation_-_Regular_modules.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: overloads.md - Overloads - Invalid - Overload without an implementation - Regular modules
mdtest path: crates/red_knot_python_semantic/resources/mdtest/overloads.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import overload
 2 | 
 3 | @overload
 4 | def func(x: int) -> int: ...
 5 | @overload
 6 | # error: [invalid-overload] "Overloaded function `func` must have an implementation outside a stub file"
 7 | def func(x: str) -> str: ...
 8 | 
 9 | class Foo:
10 |     @overload
11 |     def method(self, x: int) -> int: ...
12 |     @overload
13 |     # error: [invalid-overload] "Overloaded function `method` must have an implementation outside a stub file"
14 |     def method(self, x: str) -> str: ...
```

# Diagnostics

```
error: lint:invalid-overload: Overloaded function `func` must have an implementation outside a stub file
 --> src/mdtest_snippet.py:7:5
  |
5 | @overload
6 | # error: [invalid-overload] "Overloaded function `func` must have an implementation outside a stub file"
7 | def func(x: str) -> str: ...
  |     ^^^^
8 |
9 | class Foo:
  |

```

```
error: lint:invalid-overload: Overloaded function `method` must have an implementation outside a stub file
  --> src/mdtest_snippet.py:14:9
   |
12 |     @overload
13 |     # error: [invalid-overload] "Overloaded function `method` must have an implementation outside a stub file"
14 |     def method(self, x: str) -> str: ...
   |         ^^^^^^
   |

```
